# music-skill

./: .env.example  .gitignore  CHANGELOG.md  README.md  openclaw.plugin.json  package.json  pnpm-lock.yaml  tsconfig.json
data/: intents.csv  music-reasoning.csv  responses.csv
desktop/: main.cjs  preload.cjs
docs/: AGENT_FIRST_REFACTOR_PLAN.md  CODE_ARCHITECTURE.md  DESKTOP_PLAYER_PLAN.md  DISPLAY_LAYER_PRD.md  DISPLAY_LAYER_WIREFRAME.md  FAQ.md  INSTALL_OPENCLAW.md  LOCAL_AUDIO_ANALYSIS_PLAN.md  LOCAL_EDITION_PLAN.md  MACOS_ADAPTATION_PLAN.md  MUSIC_AGENT_FRAMEWORK.md  MUSIC_AGENT_PERSONA_ARCHITECTURE.md  MUSIC_AGENT_TECH_SPEC.md  OPENCLAW_INTEGRATION.md  OPENCLAW_REQUEST_EXAMPLES.md  PLAYER_AGENT_REFACTOR_PLAN.md  PLUGIN_ARCHITECTURE.md  PRD.md  PRODUCT_REPORT.md  PROJECT_INIT_PLAN.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.2.0.md  SKILL_SPEC.md  TECH_SPEC.md  TRIGGER_KEYWORDS.md  UIUX_PROMAX_ARCHITECTURE_ANALYSIS.md  USER_GUIDE.md  VOICE_RESPONSE_MVP.md
mac/music-agent/: MACOS_VOICE_CONTROL_PLAN.md  README.md
player-host/: CMakeLists.txt
player-host/src/: AudioEngine.cpp  AudioEngine.h  JsonProtocol.cpp  JsonProtocol.h  main.cpp
scripts/: generate-music-agent.ts  install-and-run.ps1  install-and-run.sh  install-openclaw.ps1  install-openclaw.sh  migrate-json-to-sqlite.ts  package-plugin.ps1  player-host.ps1  start-assistant.ps1  start-assistant.sh  start-desktop.ps1  start-panel.ps1  start-panel.sh  start-tray.ps1  start-voice.ps1  start-voice.sh
skills/music_skill/: SKILL.md
src/agent/: index.ts
ui/: app.js  panel.html  styles.css
(+129 files in other folders)
